# FitnessTrackerV3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: emergency_session.csv
include/: Biking.h  DisplayMenu.h  Running.h  Swimming.h  calorieChecker.h  fileManager.h  songManager.h  workOut.h  workoutAssign.h  workoutLogger.h  workoutReccomendation.h
src/: Biking.cpp  DisplayMenu.cpp  Running.cpp  Swimming.cpp  calorieChecker.cpp  fileManager.cpp  songManager.cpp  workOut.cpp  workoutAssign.cpp  workoutLogger.cpp  workoutReccomendation.cpp
test/: test_name_validation.cpp
